testsuite/tests/properties/invalid_dynvar/call_unbound/test.lkt
from common import BaseNode, FooNode, my_var

class Example: BaseNode implements TokenNode {
    fun get_int_impl(): Int = node.internal_get_int()
}
